--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,18 +23,41 @@ include_directories(../databento-cpp/build/_deps/date_src-src/include)
 include_directories(../databento-cpp/build/_deps/httplib-src)
 include_directories(../databento-cpp/build/_deps/json-src/include)
 
-# Source files
-set(SOURCES
-    src/main.cpp
+# Common source files
+set(COMMON_SOURCES
     src/streamer.cpp
     src/utils.cpp
 )
 
-# Create executable
-add_executable(${PROJECT_NAME} ${SOURCES})
+# TCP sender executable
+set(SENDER_SOURCES
+    src/sender_main.cpp
+    src/tcp_sender.cpp
+    ${COMMON_SOURCES}
+)
 
-# Link libraries manually
-target_link_libraries(${PROJECT_NAME} 
+# TCP receiver executable
+set(RECEIVER_SOURCES
+    src/receiver_main.cpp
+    src/tcp_receiver.cpp
+    ${COMMON_SOURCES}
+)
+
+# Create executables
+add_executable(TCP_Sender ${SENDER_SOURCES})
+add_executable(TCP_Receiver ${RECEIVER_SOURCES})
+
+# Link libraries for executables
+target_link_libraries(TCP_Sender 
+    ${CMAKE_CURRENT_SOURCE_DIR}/../databento-cpp/build/lib/Debug/libdatabento.a
+    OpenSSL::SSL
+    OpenSSL::Crypto
+    ZLIB::ZLIB
+    CURL::libcurl
+    ${ZSTD_LIBRARY}
+)
+
+target_link_libraries(TCP_Receiver 
     ${CMAKE_CURRENT_SOURCE_DIR}/../databento-cpp/build/lib/Debug/libdatabento.a
     OpenSSL::SSL
     OpenSSL::Crypto
@@ -44,4 +67,5 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 # Compiler flags
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -O2)
+target_compile_options(TCP_Sender PRIVATE -Wall -Wextra -O2)
+target_compile_options(TCP_Receiver PRIVATE -Wall -Wextra -O2)
