--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,10 +36,11 @@ set(SENDER_SOURCES
     ${COMMON_SOURCES}
 )
 
-# TCP receiver executable (now with JSON output)
+# TCP receiver executable (now with queue-based processing)
 set(RECEIVER_SOURCES
     src/receiver_main.cpp
     src/tcp_receiver.cpp
+    src/queue_sender.cpp
     ${COMMON_SOURCES}
 )
 
