--- a/.cursorignore
+++ b/.cursorignore
@@ -1,292 +1,22 @@
-# Cursor ignore file for FACTT project
+# Cursor ignore file to suppress false warnings
 
-# Python cache files
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-
-*.json
-
-# Distribution / packaging
-.Python
+# Build directories
 build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+**/build/
 
-# PyInstaller
-*.manifest
-*.spec
+# Dependencies
+databento-cpp/
+node_modules/
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+# Output files
+*.o
+*.a
+*.so
+*.dylib
+*.exe
 
 # IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Project specific ignores
-# MongoDB data files
-mongo_data/
-*.wt
-*.lock
-
-# Backtest data
-backtest/data/
-backtest/mongo_data/
-
-# Frontend build files
-frontend/dist/
-frontend/node_modules/
-
-# Log files
-*.log
-logs/
-
-# Temporary files
-tmp/
-temp/
-*.tmp
-
-# Large data files
-*.csv
 *.json
-*.pkl
-*.pickle
-
-# Archive files
-Archive/
-
-# Generated documentation
-doc/graph/*.svg
-
-# Configuration files with sensitive data
-*.env
-*.key
-*.pem
-
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-
-# Backup files
-*.bak
-*.backup
-*_backup.*
-
-# Test output files
-test_output/
-test_results/
-
-# Jupyter notebook checkpoints
-.ipynb_checkpoints/
-
-# Large model files
-*.model
-*.h5
-*.hdf5
-*.pkl
-*.joblib
-
-# Compiled Python files
-*.pyc
-*.pyo
-*.pyd
-
-# C extensions
-*.so
-*.dylib
-*.dll
-
-# Package files
-*.tar.gz
-*.zip
-*.rar
-*.7z
-
-# IDE specific files
-*.sublime-project
-*.sublime-workspace
-.vscode/settings.json
-.vscode/launch.json
-
-# Git files
-.git/
-.gitignore
-
-# Docker files
-Dockerfile
-docker-compose.yml
-.dockerignore
-
-# Kubernetes files
-*.yaml
-*.yml
-!requirements*.yml
-!strategy_*.yml
-
-# Terraform files
-*.tf
-*.tfstate
-*.tfvars
-
-# Ansible files
-*.ansible
-playbooks/
-
-# CI/CD files
-.github/
-.gitlab-ci.yml
-.travis.yml
-.circleci/
-
-# Monitoring and logging
-prometheus/
-grafana/
-elasticsearch/
-kibana/
-
-# Backup directories
-backup/
-backups/
-
-# Cache directories
-.cache/
-cache/
-
-# Temporary directories
-tmp/
-temp/
-temporary/
-
-# Node.js (if any frontend components)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# React build files
-build/
-
-# Next.js
-.next/
-out/
-
-# Nuxt.js
-.nuxt/
-dist/
-
-# Gatsby
-.cache/
-public/
-
-# Storybook
-storybook-static/
-
-# Temporary folders
-tmp/
-temp/
