--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -3,7 +3,7 @@ sender.port=8080
 sender.delay_ms=0
 sender.zero_copy=false
 sender.batch_size=100
-sender.data_file=/Users/hang/github_repo/assignment/src/data/CLX5_mbo.dbn
+sender.data_file=../data/CLX5_mbo.dbn
 
 # Receiver settings
 receiver.host=127.0.0.1
@@ -12,7 +12,7 @@ receiver.symbol=CLX5
 receiver.top_levels=10
 receiver.output_full_book=true
 receiver.json_enabled=true
-receiver.json_output_file=/Users/hang/github_repo/assignment/src/data/order_book_output.json
+receiver.json_output_file=../data/order_book_output.json
 receiver.json_batch_size=5000
 receiver.json_flush_interval=500
 
