--- a/server/config/config.ini
+++ b/server/config/config.ini
@@ -6,12 +6,11 @@ websocket.port=9001
 server.top_levels=10
 server.ring_buffer_size=65536
 
-# PostgreSQL settings
-postgres.host=localhost
-postgres.port=5432
-postgres.dbname=orderbook
-postgres.user=postgres
-postgres.password=postgres
-postgres.max_connections=10
-postgres.connection_timeout=30
+# ClickHouse settings (high-performance columnar database)
+clickhouse.host=127.0.0.1
+clickhouse.port=9000
+clickhouse.database=orderbook
+clickhouse.user=default
+clickhouse.password=0309
+clickhouse.compression=true
 
