--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 project(OrderBookProject LANGUAGES CXX)
 
+# Enable compile_commands.json for clangd and IntelliSense
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
